adjust_server/adjust_server-helm/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adjust-server-service
spec:
  selector:
    app: adjust-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
