adjust_server/adjust_server-helm/templates/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: adjust-server.local
      http:
        paths:
          - backend:
              serviceName: adjust-server
              servicePort: 80
